--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,22 +8,24 @@
     <uses-permission android:name="android.permission.STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/NoTitle_Theme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".MainActivity" android:configChanges="orientation">
+<!--android:configChanges="orientation|screenSize"-->
+        <activity android:name=".MainActivity"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SourceListActivity" android:configChanges="orientation"></activity>
+        <activity android:name=".SourceListActivity"
+            android:configChanges="orientation|screenSize">
+        </activity>
     </application>
-
 </manifest>
