To Do: 1. Add subtitle -Trying to add through separate MediaPlayer/TextView (Tried adding through VideoView but was not successful) Completed: 1. Make controller to transparent and make it visible when pressed video view.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,8 @@
         <activity android:name=".SourceListActivity"
             android:configChanges="orientation|screenSize">
         </activity>
+        <activity android:name=".SubtitleHandler"
+            android:configChanges="orientation|screenSize">
+        </activity>
     </application>
 </manifest>
